# vpn_scripts

./: .gitignore  devenv.nix  devenv.yaml  flake.nix  hello.py  mixed.yaml  pyproject.toml
clash_backup/: config.yaml  mihomo
clash_to_sing_box/: .gitignore  README.org  get_mixed.py  localdomain.txt  nftables-ip46.conf  run.py
clash_to_sing_box/init.d/: sing-box
dae/: .gitignore  config.dae
dae/config.d/: .gitignore  dns.dae  group.dae  node.dae  route.dae  subscription.dae
mosdns/: .gitignore  config.yaml  dns.yaml  getrule.sh  hosts  my-direct-list.txt
mosdns/mosdns/: config.yaml
mosdns/mosdns/rule/: blocklistv6.txt  realiplist.txt
mosdns/rule/: blocklistv4.txt  geosite_cn.txt  googlev6.txt
mosdns/rules/: force-cn.txt  force-nocn.txt  geosite_category-games@cn.txt  geosite_cn.txt  geosite_tracker.txt  hosts.txt
singbox/: airport.json  zju.json
