[tool.poetry]
name = "vpn-scripts"
version = "0.1.0"
description = ""
authors = ["klchen0112 <klchen0112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pyyaml = "^6.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
